--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 09:17</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 09:18</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,11 +46,11 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>13km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>81&deg; (E)</td>
+              <td>59&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>0.6</td>
+              <td>1.1</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>67W/m<sup>2</sup></td>
+              <td>118W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
