--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 14:00</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 14:01</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>27.0&deg;C</td>
+              <td>26.9&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -46,19 +46,19 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>5km/h</td>
+              <td>3km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>33&deg; (NNE)</td>
+              <td>51&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>8.6mm/h</td>
+              <td>6.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1005.8hPa</td>
+              <td>1005.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>63W/m<sup>2</sup></td>
+              <td>69W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
