--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 15:04</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 15:05</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>27.3&deg;C</td>
+              <td>27.0&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>87%</td>
+              <td>86%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>19km/h</td>
+              <td>5km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>32&deg; (NNE)</td>
+              <td>37&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>0.0mm/h</td>
+              <td>16.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1005.8hPa</td>
+              <td>1006.1hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>5W/m<sup>2</sup></td>
+              <td>7W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
