--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 15:32</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 15:33</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>25.5&deg;C</td>
+              <td>25.6&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -50,11 +50,11 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>10&deg; (NNW)</td>
+              <td>68&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>4.0mm/h</td>
+              <td>3.2mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
