--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 20:13</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 20:14</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.6&deg;C</td>
+              <td>26.7&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -46,19 +46,19 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>14km/h</td>
+              <td>8km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>32&deg; (NNE)</td>
+              <td>34&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>12.2mm/h</td>
+              <td>6.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1004.4hPa</td>
+              <td>1004.1hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
