--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 20:25</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 20:26</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,15 +46,15 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>8km/h</td>
+              <td>11km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>70&deg; (ENE)</td>
+              <td>12&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>1.0mm/h</td>
+              <td>0.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
