--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 21:29</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 21:30</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>25.8&deg;C</td>
+              <td>25.9&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -46,15 +46,15 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>10km/h</td>
+              <td>14km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>25&deg; (NNE)</td>
+              <td>35&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>8.8mm/h</td>
+              <td>5.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
