--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 21:30</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 21:31</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,19 +42,19 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>92%</td>
+              <td>91%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>14km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>35&deg; (NE)</td>
+              <td>57&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>5.0mm/h</td>
+              <td>3.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
