--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 21:55</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 21:56</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.6&deg;C</td>
+              <td>26.5&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>88%</td>
+              <td>89%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,15 +50,15 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>34&deg; (NE)</td>
+              <td>12&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>3.0mm/h</td>
+              <td>2.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1004.4hPa</td>
+              <td>1004.7hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
