--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">18 Aug 2020, 22:15</h3><br>
+      <br><br><h3 class="wx-center">18 Aug 2020, 22:16</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>27.1&deg;C</td>
+              <td>26.9&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>87%</td>
+              <td>88%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>21km/h</td>
+              <td>24km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>33&deg; (NNE)</td>
+              <td>76&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>140.4mm/h</td>
+              <td>44.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1004.7hPa</td>
+              <td>1004.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
