--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 00:02</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 00:03</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,23 +42,23 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>93%</td>
+              <td>92%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>2km/h</td>
+              <td>19km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>71&deg; (ENE)</td>
+              <td>33&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>21.6mm/h</td>
+              <td>20.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1003.7hPa</td>
+              <td>1003.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
