--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 00:50</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 00:51</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,15 +46,15 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>16km/h</td>
+              <td>13km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>41&deg; (NE)</td>
+              <td>70&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>95.2mm/h</td>
+              <td>64.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
