--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 00:56</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 00:57</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,19 +46,19 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>11km/h</td>
+              <td>3km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>50&deg; (NE)</td>
+              <td>326&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>43.4mm/h</td>
+              <td>51.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1003.0hPa</td>
+              <td>1002.7hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
