--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 01:00</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 01:01</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.1&deg;C</td>
+              <td>26.2&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>93%</td>
+              <td>94%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>16km/h</td>
+              <td>18km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>25&deg; (NNE)</td>
+              <td>354&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>10.6mm/h</td>
+              <td>7.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1003.0hPa</td>
+              <td>1002.7hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
