--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 01:15</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 01:16</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,23 +42,23 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>94%</td>
+              <td>93%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>16km/h</td>
+              <td>10km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>39&deg; (NE)</td>
+              <td>30&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>117.6mm/h</td>
+              <td>28.4mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.7hPa</td>
+              <td>1003.0hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
