--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 01:21</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 01:22</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,19 +42,19 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>94%</td>
+              <td>93%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>13km/h</td>
+              <td>11km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>19&deg; (NNE)</td>
+              <td>229&deg; (SW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>10.8mm/h</td>
+              <td>6.4mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
