--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 01:23</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 01:24</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.2&deg;C</td>
+              <td>26.0&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>92%</td>
+              <td>91%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>8km/h</td>
+              <td>5km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>46&deg; (NE)</td>
+              <td>359&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>63.6mm/h</td>
+              <td>14.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1003.0hPa</td>
+              <td>1003.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
