--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 03:31</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 03:32</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,23 +38,23 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.9&deg;C</td>
+              <td>26.8&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>89%</td>
+              <td>90%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>14km/h</td>
+              <td>13km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>56&deg; (NE)</td>
+              <td>62&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>60.4mm/h</td>
+              <td>49.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
