--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 03:32</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 03:33</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,19 +46,19 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>13km/h</td>
+              <td>14km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>62&deg; (ENE)</td>
+              <td>16&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>49.0mm/h</td>
+              <td>32.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.4hPa</td>
+              <td>1002.0hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
