--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 03:39</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 03:40</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.2&deg;C</td>
+              <td>26.1&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>93%</td>
+              <td>90%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>29km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>319&deg; (NW)</td>
+              <td>123&deg; (ESE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>115.2mm/h</td>
+              <td>31.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.0hPa</td>
+              <td>1002.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
