--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 03:41</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 03:42</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,27 +38,27 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>25.9&deg;C</td>
+              <td>25.7&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>90%</td>
+              <td>89%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>24km/h</td>
+              <td>13km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>154&deg; (SSE)</td>
+              <td>359&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>18.8mm/h</td>
+              <td>8.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.4hPa</td>
+              <td>1001.7hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
