--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 04:29</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 04:30</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,23 +38,23 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.6&deg;C</td>
+              <td>26.5&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>89%</td>
+              <td>90%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>350&deg; (NNW)</td>
+              <td>91&deg; (E)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>5.4mm/h</td>
+              <td>3.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
