--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 04:44</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 04:45</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,15 +46,15 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>6km/h</td>
+              <td>18km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>58&deg; (ENE)</td>
+              <td>147&deg; (SSE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>9.4mm/h</td>
+              <td>41.8mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
